--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
 <body>
     <h1 class="titulo-principal"> Com o combo+, você pode aproveitar a Alura+ por um preço único</h1>
-
-    </head>
-
+    <img src="img/Combo.png" alt="">
 </body>
 
 </html>
