--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>minha assinatura</title>
 </head>
 
-<body>
+<body> 
+    <section>
     <h1 class="titulo-principal"> Com o combo+, você pode aproveitar a Alura+ por um preço único</h1>
     <img src="img/Combo.png" alt="">
+    </section>
 </body>
+
 
 </html>
