--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body> 
-    <section class="principal">
+    <section class="principal container" >
     <h1 class="titulo-principal"> Com o combo+, você pode aproveitar a Alura+ por um preço único</h1>
     <img src="img/Combo.png" alt="">
     </section>
