--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <section class="principal container" >
     <h1 class="titulo-principal"> Com o combo+, você pode aproveitar a Alura+ por um preço único</h1>
     <img src="img/Combo.png" alt="">
+    <a href="https://cursos.alura.com.br/dashboard" class="container_botao"></a>
     </section>
 </body>
 
