--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="https://cursos.alura.com.br/dashboard" class="container_botao">
         assine por 10x de R$150
     </a>
+        <a href="https://cursos.alura.com.br/dashboard" class="container_botao botao_secundario"> Assinar somente alura+</a>
     </section>
 </body>
 
