--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         assine por 10x de R$150
     </a>
         <a href="https://cursos.alura.com.br/dashboard" class="container_botao botao_secundario"> Assinar somente alura+</a>
+        <p class="container_aviso"> O preço pode variar caso a assinatura seja feita em outros planos </p>
     </section>
 </body>
 
