--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body> 
     <section class="principal container" >
+     <div class="container_caixa">   
     <h1 class="titulo-principal"> Com o combo+, você pode aproveitar a Alura+ por um preço único</h1>
     <img src="img/Combo.png" alt="">
     <a href="https://cursos.alura.com.br/dashboard" class="container_botao">
@@ -17,6 +18,7 @@
     </a>
         <a href="https://cursos.alura.com.br/dashboard" class="container_botao botao_secundario"> Assinar somente alura+</a>
         <p class="container_aviso"> O preço pode variar caso a assinatura seja feita em outros planos </p>
+     </div>
     </section>
 </body>
 
