--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="principal container" >
      <div class="container_caixa">   
     <h1 class="titulo-principal"> Com o combo+, você pode aproveitar a Alura+ por um preço único</h1>
-    <img src="img/Combo.png" alt="">
+    <img src="img/Combo.png" alt="" class="container_imagem">
     <a href="https://cursos.alura.com.br/dashboard" class="container_botao">
         assine por 10x de R$150
     </a>
